<resources>
    <string name="app_name">KWID</string>
    <string name="popular">Popular</string>
    <string name="most_popular_movies">Most popular movies</string>
    <string name="error_fetch_movies">Please check your internet connection</string>
    <string name="top_rated">Top Rated</string>
    <string name="highest_rated_movies">Highest rated movies of all time</string>
    <string name="upcoming">Upcoming</string>
    <string name="stay_updated">Stay updated with the latest movies</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_playing">Now Playing</string>
    <string name="these_movies_are_currently_playing_in_all_cinemas">These movies are currently playing in your city</string>
    <string name="refresh">Refresh</string>
    <string name="sign_out">Sign Out</string>
    <string name="movie_title">Movie Title</string>
    <string name="durasi">Durasi</string>
    <string name="durasi_value">123 Minutes</string>
    <string name="director_value">Director 1, Director 2</string>
    <string name="relase_value">2019–09–17</string>
    <string name="directorValue">Director 1, Director 2</string>
    <string name="background_movie">Background Movie</string>
    <string name="movie_poster">Movie Poster</string>>
    <string name="genre">Genre</string>
    <string name="genre_value">Action, Horror</string>
    <string name="duration">Durasi</string>
    <string name="duration_value">123 Minutes</string>
    <string name="director">Director</string>
    <string name="release">Release</string>
    <string name="release_value">2019–09–17</string>
    <string name="cast_crew">Cast Crew</string>
    <string name="schedule">Jadwal</string>
    <string name="overview">Overview</string>
    <string name="password_placeholder">Password</string>
    <string name="email_placeholder">Email</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="dont_have_account">Don\'t have an account ? REGISTER NOW</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="placeholder_username">Username</string>
    <string name="forgot_password">Forgot your password ? Click Here</string>
    <string name="reset_my_password">Reset My Password</string>
    <string name="email_sent_forgot_password">"Email sent. Check your email to reset password"</string>
    <string name="register_success">Register Sukses, Check your email address to verify</string>
    <string name="sign_in_with_google">Sign in</string>
    <string name="date_and_time">Date and Time</string>
    <string name="sum_of_tickets">Sum of tickets</string>
    <string name="ticket_image">Ticket Image</string>
    <string name="cinema_location">Cinema Location</string>
    <string name="location_image">Location Image</string>
    <string name="star_circle_image">Star Circle Image</string>
    <string name="price">Price</string>
    <string name="cinema_type">Cinema Type</string>
    <string name="transaction_history">Transaction History</string>
    <string name="back_button">Back Button</string>
    <string name="notification_image">Notification Image</string>
    <string name="notification_header">Notification Header</string>
    <string name="notification_body">Notification Body</string>
    <string name="movie_name">Movie Name</string>
    <string name="location">Town or Region</string>
    <string name="rounded_star_image">Rounded Star Image</string>
    <string name="top_up">Top Up</string>
    <string name="choose_top_up_method">Choose Top Up Method</string>
    <string name="credit_card">Credit Card</string>
    <string name="navigate_next">Navigate Next</string>
    <string name="transfer_bank">Transfer Bank</string>
    <string name="purchase_confirmation">Purchase Confirmation</string>
    <string name="cinema_name">Cinema Name</string>
    <string name="seat">Tempat Duduk</string>
    <string name="sum_of_ticket_price">Total Harga Tiket</string>
    <string name="time">Jam</string>
    <string name="sum_of_seat">Total Tempat Duduk</string>
    <string name="service_fee">Biaya Layanan</string>
    <string name="total_payment">Total Bayar</string>
    <string name="next">Lanjutkan</string>
    <string name="notification">Notification</string>
    <string name="seat_selection">Seat Selection</string>
    <string name="your_choice">Pilihanmu</string>
    <string name="sold">Terjual</string>
    <string name="available">Tersedia</string>
    <string name="ringkasan_order">Ringkasan Order</string>
    <string name="total_price">Total Harga</string>
    <string name="city">City</string>
    <string name="movie_video">Movie Video</string>
    <string name="actor_name">Actor Name</string>
    <string name="actor_character">Actor Character</string>
    <string name="screen">Layar</string>
    <string name="expand_more">Expand More</string>
    <string name="buy_ticket">Beli Ticket</string>
    <string name="publish">Publish</string>
    <string name="logo">Logo</string>
    <string name="use_my_location">Gunakan Lokasi Saya</string>
    <string name="insert_location">Masukkan kata kunci …</string>
    <string name="videos">Videos</string>
    <string name="videos_for_you">Videos for you</string>
    <string name="your_name_here">Your Name Here</string>
    <string name="point">Poin</string>
    <string name="point_value">1.800</string>
    <string name="balance">Balance</string>
    <string name="balance_value">Rp. 1.000.000</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="transaction_detail">Transaction Detail</string>

    <!-- Dummy for notification -->
    <string-array name="notification_type">
        <item>system</item>
        <item>movie</item>
        <item>movie</item>
        <item>movie</item>
        <item>movie</item>
    </string-array>
    <string-array name="notification_date">
        <item>15 Mar 2020</item>
        <item>17 Mar 2020</item>
        <item>07 Mar 2020</item>
        <item>27 Feb 2020</item>
        <item>26 Feb 2020</item>
    </string-array>
    <string-array name="notification_header">
        <item>Dapatkan informasi promo terkini dan transaksi Anda lewat notifikasi</item>
        <item>Film Seru Menanti Kamu</item>
        <item>Promo Special Buat Kamu!</item>
        <item>Flash Sale Dari DANA!</item>
        <item>The Invisible Man Sudah Tayang!</item>
    </string-array>
    <string-array name="notification_body">
        <item>Nyalakan notifikasi KW ID di halaman pengaturan notifikasi.</item>
        <item>Yuk nonton Bloodshot, Disney Pixar\'s Onward, The Invisible Man, atau film seru lainnya #PakeKWID!</item>
        <item>Dapatkan diskon 30% tiket pertama untuk semua film mulai jam 10.00 waktu setampat!</item>
        <item>Serbu tiket nonton dengan promo Flash Sale 50% mulai jam 13.00 WIB dan 17.00 WIB!</item>
        <item>Saksikan cerita mengerikan dari film horror The Invisible Man! Yuk pesan tiketnya!</item>
    </string-array>

    <!-- Dummy for top up -->
    <string-array name="credit_card_name">
        <item>Master Card</item>
        <item>Visa</item>
    </string-array>
    <string-array name="credit_card_image_url">
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/MasterCard_Logo.svg/1200px-MasterCard_Logo.svg.png</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Visa_Inc._logo.svg/800px-Visa_Inc._logo.svg.png</item>
    </string-array>
    <string-array name="credit_card_url">
        <item>https://www.mastercard.co.id/id-id.html</item>
        <item>https://www.visa.co.id/pay-with-visa/find-a-card/credit-cards.html</item>
    </string-array>

    <string-array name="bank_name">
        <item>BCA</item>
        <item>BRI</item>
        <item>Mandiri</item>
    </string-array>
    <string-array name="bank_image_url">
        <item>https://vectorlogo4u.com/wp-content/uploads/2018/11/Bank-BCA-Vector-Logo-720x340.png</item>
        <item>https://4.bp.blogspot.com/-g2Uu50qxcrs/VMvJOSV_9EI/AAAAAAAAAGM/BDzywuaFDEU/s1600/bri.png</item>
        <item>https://upload.wikimedia.org/wikipedia/id/thumb/f/fa/Bank_Mandiri_logo.svg/1200px-Bank_Mandiri_logo.svg.png</item>
    </string-array>
    <string-array name="bank_url">
        <item>https://www.bca.co.id/</item>
        <item>https://bri.co.id/</item>
        <item>https://www.bankmandiri.co.id/</item>
    </string-array>

    <!-- Dummy for transaction history -->
    <string-array name="transaction_movie_poster">
        <item>https://cdn0-production-images-kly.akamaized.net/-n7K8QQYtJr2BTASrLaI_WbgxII=/640x853/smart/filters:quality(75):strip_icc():format(jpeg)/kly-media-production/medias/2984036/original/034006400_1575278238-Jumanji_The_Next_Level_Headline.jpg</item>
        <item>https://m.media-amazon.com/images/M/MV5BMTc5MDE2ODcwNV5BMl5BanBnXkFtZTgwMzI2NzQ2NzM@._V1_.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/0/03/Onward_poster.jpg</item>
    </string-array>

    <string-array name="transaction_movie_title">
        <item>Jumanji: The Next Level</item>
        <item>Avenger: Endgame</item>
        <item>Onward</item>
    </string-array>

    <string-array name="transaction_cinema_name">
        <item>Festival Citylink XXI</item>
        <item>Festival Citylink XXI</item>
        <item>Festival Citylink XXI</item>
    </string-array>

    <string-array name="transaction_schedule">
        <item>Sabtu, 21 Des 2019</item>
        <item>Senin, 23 Des 2019</item>
        <item>Selasa, 24 Des 2019</item>
    </string-array>

    <string-array name="transaction_picked_seat">
        <item>A1,A2</item>
        <item>D3,D5</item>
        <item>B8,B9</item>
    </string-array>

    <string-array name="transaction_ticket_price">
        <item>50000</item>
        <item>35000</item>
        <item>35000</item>
    </string-array>

    <string-array name="transaction_time">
        <item>14:10</item>
        <item>10:00</item>
        <item>14:10</item>
    </string-array>

    <string-array name="transaction_service_fee">
        <item>3000</item>
        <item>3000</item>
        <item>3000</item>
    </string-array>

    <!-- Dummy for seat selection -->
    <string name="dummy_seat_selection">A1,A2,A3,A4,A5,B1,B2,B3,B4,B5,C1,C2,C3,C4,C5,D1,D2,D3,D4,D5,E1,E2,E3,E4,E5,F1,F2,F3,F4,F5,G1,G2,G3,G4,G5</string>
    <string name="dummy_is_empty">true,false,false,false,true,true,true,true,true,true,true,false,false,true,true,true,false,true,true,true,true,true,false,true,true,true,false,false,false,true,true,true,true,false,false</string>
    <string name="empty_favorite_movie_message">Your favorite movie list is empty\n Click some movies and hit that love button!</string>
    <string name="appbar_forgot_password">Forgot Password</string>
    <string name="location_list">Location List</string>
    <string name="edit_username">Edit username</string>
    <string name="rate">Rate This Film</string>

    <!-- Dummy for schedule -->
    <string-array name="schedule_cinema_name">
        <item>Aeon Mall JGC CGV</item>
        <item>Festival Citylink XXI</item>
        <item>BTC XXI</item>
    </string-array>

    <string-array name="schedule_cinema_type">
        <item>Regular 2D</item>
        <item>Regular 2D</item>
        <item>Regular 2D</item>
    </string-array>

    <string-array name="schedule_ticket_price">
        <item>50000</item>
        <item>45000</item>
        <item>35000</item>
    </string-array>

    <string-array name="schedule_time">
        <item>11.00,15.10</item>
        <item>09.00,12.25,19.45</item>
        <item>08.10,12.00,17.45,22.45</item>
    </string-array>
</resources>
