<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:padding="15dp"
    android:background="@drawable/rectangle_white_color_top_bottom_border">

    <androidx.cardview.widget.CardView
        android:layout_width="80dp"
        android:layout_height="120dp"
        app:cardCornerRadius="20dp">

        <ImageView
            android:id="@+id/img_movie_poster"
            android:contentDescription="@string/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_marginStart="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_movie_title"
            android:text="@string/movie_title"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <ImageView
                android:src="@drawable/location_black"
                android:contentDescription="@string/location_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_cinema_location"
                android:text="@string/cinema_location"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:textAllCaps="true"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <ImageView
                android:src="@drawable/ticket_black"
                android:contentDescription="@string/ticket_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_sum_ticket"
                android:text="@string/sum_of_tickets"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:textAllCaps="true"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_date"
            android:text="@string/date_and_time"
            android:textColor="@color/colorTextLower"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>