<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".Fragment.ScheduleFragment">

    <LinearLayout
        android:id="@+id/button_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_skin_color_top_bottom_border"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="top"
            android:orientation="horizontal">

        <ImageView
            android:src="@drawable/icbaseline_location_on"
            android:contentDescription="@string/location_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/txt_location"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:background="@color/colorBackground"
                android:text="@string/city"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/expand_more"
                android:src="@drawable/icoutline_expand_more" />

        </LinearLayout>
        <!---Untuk date -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_white_color_top_bottom_border"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_date" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ticket_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_ticket" />
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <!---Untuk Button -->
    <LinearLayout
        android:id="@+id/btn_buy_ticket"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:background="@color/colorDarkBlue">

        <ImageView
            android:src="@drawable/ticket"
            android:contentDescription="@string/ticket_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/buy_ticket"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/colorYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />
    </LinearLayout>
</FrameLayout>