<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".Activity.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:background="@color/colorTopBar"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_back_forgot_password"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/icbaseline_arrow_back"
            android:contentDescription="@string/back_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/appbar_forgot_password"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_forgotpassword_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/error_message"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            tools:text="Message" />

        <EditText
            android:id="@+id/et_forgotpassword_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:autofillHints="@string/email_placeholder"
            android:background="@drawable/edit_text_rounded"
            android:drawableStart="@drawable/login_email"
            android:drawablePadding="10dp"
            android:hint="@string/email_placeholder"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/hintColor" />

        <Button
            android:id="@+id/btn_forgot_password_submit"
            style="?borderlessButtonStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_reset_password"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:text="@string/reset_my_password"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>